# odsc_intro_to_ml

./: abstract.txt  introduction_to_ml.ipynb  pyproject.toml
data/: processed_cleveland.csv
